--- a/app/src/homecon-app.html
+++ b/app/src/homecon-app.html
@@ -142,7 +142,7 @@
                 <!-- Main -->
                 <div class="main-content">
                     <iron-pages selected="[[page]]" attr-for-selected="name">
-                        <view-login name="login" connected="{{connected}}"></view-login>
+                        <view-login name="login"></view-login>
                         <view-pages name="pages" route="[[subroute]]" sections="{{homeconSections}}" pages="{{homeconPages}}" pageid="{{pageid}}" edit="[[edit]]"></view-pages>
                         <view-settings name="settings"></view-settings>
                         <view-editor name="editor" edit="{{edit}}"></view-editor>
