--- a/app/src/homecon-app.html
+++ b/app/src/homecon-app.html
@@ -143,9 +143,9 @@
                 <div class="main-content">
                     <iron-pages selected="[[page]]" attr-for-selected="name">
                         <view-login name="login"></view-login>
-                        <view-pages name="pages" route="[[subroute]]" sections="{{homeconSections}}" pages="{{homeconPages}}" pageid="{{pageid}}" edit="[[edit]]"></view-pages>
+                        <view-pages name="pages" route="[[subroute]]" sections="{{homeconSections}}" pages="{{homeconPages}}" path="{{pagesPath}}" pageid="{{pageid}}" edit="[[edit]]"></view-pages>
                         <view-settings name="settings"></view-settings>
-                        <view-editor name="editor" edit="{{edit}}"></view-editor>
+                        <view-editor name="editor" edit="{{edit}}" pages-path="{{pagesPath}}"></view-editor>
                         <view-users name="users"></view-users>
                     </iron-pages>
                 </div>
