--- a/app/src/view-login.html
+++ b/app/src/view-login.html
@@ -25,7 +25,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             }
 
             paper-material {
-                width: 100%;
                 max-width: 500px;
                 margin-left: auto;
                 margin-right: auto;
@@ -48,7 +47,13 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                 color: var(--primary-text-color);
             }
 
-            @media only screen and (max-height: 800px) {
+            @media only screen and (min-height: 600px) {
+                #loginform {
+                    margin-top: 120px;
+                }
+            }
+
+            @media only screen and (min-height: 800px) {
                 #loginform {
                     margin-top: 200px;
                 }
